--- a/src/styles/components/collapse.scss
+++ b/src/styles/components/collapse.scss
@@ -6,8 +6,7 @@
 
     .collapse {
         padding: 0 28px 0 20px;
-
-        width: 100%;
+        border-radius: 5px;
 
         .collapse-content {
             font-size: 13px;
@@ -26,6 +25,7 @@
             padding: 0px 10px;
             margin-top: 20px;
             width: 100%;
+            border-radius: 5px;
 
             .subtitle {
                 color: $color-3;
@@ -47,49 +47,51 @@
 }
 
 // ----------------------------------------------------- style pour les collapses des fiches logements
-// .collapse-card {
-//     display: flex;
-//     flex-direction: column;
+.collapse-card {
+    display: flex;
+    flex-direction: column;
+    margin: 0 20px 0 20px;
 
-//     .collapse {
-//         width: 100%;
+    .collapse {
+        border-radius: 5px;
 
-//         .collapse-content {
-//             font-size: 13px;
-//             padding: 13px 28px 20px 20px;
-//             background-color: #f6f6f673;
-//         }
+        .collapse-content {
+            font-size: 13px;
+            padding: 13px 28px 20px 20px;
+            background-color: #f6f6f673;
+        }
 
-//         .collapse-title {
-//             padding: 19px 28px 20px 20px;
-//             background: $color-1;
-//             display: flex;
-//             justify-content: space-between;
-//             align-items: center;
-//             font-size: 13px;
-//             font-weight: 700;
-//             padding: 0px 10px;
-//             margin-top: 20px;
-//             width: 100%;
+        .collapse-title {
+            padding: 19px 28px 20px 20px;
+            background: $color-1;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            font-size: 13px;
+            font-weight: 700;
+            padding: 0px 10px;
+            margin-top: 20px;
+            width: 100%;
+            border-radius: 5px;
 
-//             .subtitle {
-//                 color: $color-3;
-//             }
+            .subtitle {
+                color: $color-3;
+            }
 
-//             .rotate {
-//                 transition: transform 0.3s ease;
-//             }
+            .rotate {
+                transition: transform 0.3s ease;
+            }
 
-//             .rotateUp {
-//                 transform: rotate(180deg);
-//             }
+            .rotateUp {
+                transform: rotate(180deg);
+            }
 
-//             .rotateDown {
-//                 transform: rotate(0);
-//             }
-//         }
-//     }
-// }
+            .rotateDown {
+                transform: rotate(0);
+            }
+        }
+    }
+}
 
 //------------------------------------------ media query
 @media (min-width: 768px) {
@@ -98,9 +100,10 @@
 
         .collapse {
             padding: 0 108px 0 108px;
+            width: 100%;
 
             .collapse-title {
-                font-size: 18px;
+                font-size: 16px;
                 padding: 8px 15px 8px 10px;
             }
 
@@ -111,22 +114,29 @@
     }
 
     //---------------------------------------- collaspe logement
-    // .collapse-card {
-    //     margin: 0 25px 0 25px;
+    .collapse-card {
+        margin: 0 25px 0 25px;
+        display: flex;
+        flex-direction: row;
+        gap: 76px;
 
-    //     .collapse {
-    //         padding: 0 108px 0 108px;
+        div {
+            width: 100%;
+        }
 
-    //         .collapse-title {
-    //             font-size: 18px;
-    //             padding: 8px 15px 8px 10px;
-    //         }
+        .collapse {
+            width: 100%;
 
-    //         .collapse-content {
-    //             font-size: 15px;
-    //         }
-    //     }
-    // }
+            .collapse-title {
+                font-size: 16px;
+                padding: 8px 15px 8px 10px;
+            }
+
+            .collapse-content {
+                font-size: 15px;
+            }
+        }
+    }
 }
 
 @media (min-width: 1025px) {
@@ -148,20 +158,20 @@
     }
 
     //-------------------------------------------------- collaspe logement
-    //     .collapse-card {
-    //         margin: 0 100px 0 100px;
+    .collapse-card {
+        margin: 0 100px 0 100px;
 
-    //         .collapse {
-    //             padding: 0 0px 0 0px;
+        .collapse {
+            padding: 0 0px 0 0px;
 
-    //             .collapse-title {
-    //                 font-size: 24px;
-    //                 padding: 10px 20px 10px 15px;
-    //             }
+            .collapse-title {
+                font-size: 24px;
+                padding: 10px 20px 10px 15px;
+            }
 
-    //             .collapse-content {
-    //                 font-size: 18px;
-    //             }
-    //         }
-    //     }
+            .collapse-content {
+                font-size: 18px;
+            }
+        }
+    }
 }
