--- a/src/styles/components/banner.css
+++ b/src/styles/components/banner.css
@@ -53,6 +53,7 @@ a {
      object-fit: cover;
   border-radius: 10px;
   filter: brightness(60%);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 @media (min-width: 768px) {
