--- a/src/styles/components/card.css
+++ b/src/styles/components/card.css
@@ -78,6 +78,9 @@ a {
     width: 100%;
     height: 250px;
   }
+  .card-content p {
+    top: 80%;
+  }
 }
 @media (min-width: 1025px) {
   .card-content {
