--- a/src/styles/components/navigation.css
+++ b/src/styles/components/navigation.css
@@ -10,7 +10,7 @@ ul {
   align-items: center;
   justify-content: space-around;
   padding-top: 20px;
-  margin-bottom: 27px;
+  margin: 0px 20px 27px 20px;
   font-weight: 500;
   font-size: 12px;
   text-transform: uppercase;
@@ -24,6 +24,7 @@ ul {
   .navigation {
     justify-content: space-between;
     margin: 20px 20px 20px 20px;
+    font-size: 16px;
   }
 }
 @media (min-width: 1025px) {
