--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -24,6 +24,7 @@ ul {
     .navigation {
         justify-content: space-between;
         margin: 20px 20px 20px 20px;
+        font-size: 16px;
     }
 }
 
