--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -6,3 +6,4 @@
 @import "../components/card.scss";
 @import "../components/collapse.scss";
 @import "../components/fiches.scss";
+@import "../components/carrousel.scss"
