--- a/src/styles/components/carrousel.scss
+++ b/src/styles/components/carrousel.scss
@@ -11,6 +11,7 @@
         height: 225px;
         background: $color-1;
         object-fit: cover;
+        border-radius: 10px;
         position: relative;
 
     }
@@ -32,6 +33,16 @@
         left: 7%
     }
 
+    p {
+        position: absolute;
+        bottom: 6%;
+        left: 50%;
+        color: $color-3;
+        font-size: 18px;
+        font-weight: 500;
+        visibility: hidden;
+    }
+
 }
 
 @media (min-width : 768px) {
@@ -46,6 +57,10 @@
             width: 36px;
             height: 52px;
         }
+
+        p {
+            visibility: visible;
+        }
     }
 }
 
@@ -56,6 +71,7 @@
 
         img {
             height: 415px;
+            border-radius: 25px;
         }
 
         .arrow {
