--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -2,10 +2,6 @@
 
 .card-content {
     margin: 20px 20px 20px 20px;
-    // display: flex;
-    // flex-direction: column;
-    // align-items: center;
-    // gap: 20px;
     display: grid;
     grid-template-columns: 1fr;
     align-items: center;
@@ -60,7 +56,7 @@
         }
 
         p {
-            top: 80%
+            top: 75%
         }
     }
 }
@@ -69,6 +65,7 @@
     .card-content {
         grid-template-columns: 1fr 1fr 1fr;
         margin: 43px 100px 50px 100px;
+        gap: 60px;
 
 
         article {
@@ -81,5 +78,6 @@
             height: 340px;
 
         }
+
     }
 }
