--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -14,6 +14,8 @@ ul {
     font-weight: 500;
     font-size: 12px;
     text-transform: uppercase;
+
+
 }
 
 .nav-active {
@@ -34,6 +36,10 @@ ul {
         font-size: 24px;
         text-transform: capitalize;
         justify-content: space-between;
+
+        img {
+            width: 210px;
+        }
 
         ul {
             gap: 57px;
