--- a/src/styles/pages/_settings.scss
+++ b/src/styles/pages/_settings.scss
@@ -34,9 +34,10 @@ a {
 @media (min-width : 1025px) {
     body {
         min-width: 1025px;
-
-        margin: 0;
+        max-width: 1440px;
+        margin: auto;
         padding: 0;
+        box-sizing: border-box;
     }
 
 
