--- a/src/styles/components/collapse.scss
+++ b/src/styles/components/collapse.scss
@@ -33,6 +33,9 @@
 
             .rotate {
                 transition: transform 0.3s ease;
+                display: flex;
+                align-items: center;
+
             }
 
             .rotateUp {
@@ -47,12 +50,13 @@
 }
 
 // ----------------------------------------------------- style pour les collapses des fiches logements
+
 .collapse-card {
     display: flex;
     flex-direction: column;
-    margin: 0 20px 0 20px;
 
     .collapse {
+        padding: 0 28px 0 20px;
         border-radius: 5px;
 
         .collapse-content {
@@ -80,10 +84,14 @@
 
             .rotate {
                 transition: transform 0.3s ease;
+                display: flex;
+                align-items: center;
+
+
             }
 
             .rotateUp {
-                transform: rotate(0);
+                transform: rotate(0deg);
             }
 
             .rotateDown {
@@ -118,9 +126,9 @@
         margin: 0 25px 0 25px;
         display: flex;
         flex-direction: row;
-        gap: 76px;
 
-        div {
+
+        .collapse-conteneur {
             width: 100%;
         }
 
@@ -160,6 +168,7 @@
     //-------------------------------------------------- collaspe logement
     .collapse-card {
         margin: 0 100px 0 100px;
+        gap: 76px;
 
         .collapse {
             padding: 0 0px 0 0px;
