--- a/src/styles/pages/index.css
+++ b/src/styles/pages/index.css
@@ -21,11 +21,13 @@ a {
   cursor: pointer;
 }
 
-@media (min-width: 1025px) and (max-width: 1440px) {
+@media (min-width: 1025px) {
   body {
     min-width: 1025px;
-    margin: 0;
+    max-width: 1440px;
+    margin: auto;
     padding: 0;
+    box-sizing: border-box;
   }
 }
 ul {
@@ -64,6 +66,9 @@ ul {
     text-transform: capitalize;
     justify-content: space-between;
   }
+  .navigation img {
+    width: 210px;
+  }
   .navigation ul {
     gap: 57px;
   }
@@ -91,11 +96,13 @@ a {
   cursor: pointer;
 }
 
-@media (min-width: 1025px) and (max-width: 1440px) {
+@media (min-width: 1025px) {
   body {
     min-width: 1025px;
-    margin: 0;
+    max-width: 1440px;
+    margin: auto;
     padding: 0;
+    box-sizing: border-box;
   }
 }
 .banner {
@@ -196,11 +203,13 @@ a {
   cursor: pointer;
 }
 
-@media (min-width: 1025px) and (max-width: 1440px) {
+@media (min-width: 1025px) {
   body {
     min-width: 1025px;
-    margin: 0;
+    max-width: 1440px;
+    margin: auto;
     padding: 0;
+    box-sizing: border-box;
   }
 }
 .erreur-content {
@@ -250,11 +259,13 @@ a {
   cursor: pointer;
 }
 
-@media (min-width: 1025px) and (max-width: 1440px) {
+@media (min-width: 1025px) {
   body {
     min-width: 1025px;
-    margin: 0;
+    max-width: 1440px;
+    margin: auto;
     padding: 0;
+    box-sizing: border-box;
   }
 }
 .card-content {
@@ -308,13 +319,14 @@ a {
     height: 250px;
   }
   .card-content p {
-    top: 80%;
+    top: 75%;
   }
 }
 @media (min-width: 1025px) {
   .card-content {
     grid-template-columns: 1fr 1fr 1fr;
     margin: 43px 100px 50px 100px;
+    gap: 60px;
   }
   .card-content article {
     width: 100%;
@@ -348,11 +360,13 @@ a {
   cursor: pointer;
 }
 
-@media (min-width: 1025px) and (max-width: 1440px) {
+@media (min-width: 1025px) {
   body {
     min-width: 1025px;
-    margin: 0;
+    max-width: 1440px;
+    margin: auto;
     padding: 0;
+    box-sizing: border-box;
   }
 }
 .collapse-about {
@@ -386,20 +400,22 @@ a {
 }
 .collapse-about .collapse .collapse-title .rotate {
   transition: transform 0.3s ease;
+  display: flex;
+  align-items: center;
 }
 .collapse-about .collapse .collapse-title .rotateUp {
-  transform: rotate(180deg);
+  transform: rotate(0deg);
 }
 .collapse-about .collapse .collapse-title .rotateDown {
-  transform: rotate(0);
+  transform: rotate(180deg);
 }
 
 .collapse-card {
   display: flex;
   flex-direction: column;
-  margin: 0 20px 0 20px;
 }
 .collapse-card .collapse {
+  padding: 0 28px 0 20px;
   border-radius: 5px;
 }
 .collapse-card .collapse .collapse-content {
@@ -425,12 +441,14 @@ a {
 }
 .collapse-card .collapse .collapse-title .rotate {
   transition: transform 0.3s ease;
+  display: flex;
+  align-items: center;
 }
 .collapse-card .collapse .collapse-title .rotateUp {
-  transform: rotate(180deg);
+  transform: rotate(0deg);
 }
 .collapse-card .collapse .collapse-title .rotateDown {
-  transform: rotate(0);
+  transform: rotate(180deg);
 }
 
 @media (min-width: 768px) {
@@ -452,9 +470,8 @@ a {
     margin: 0 25px 0 25px;
     display: flex;
     flex-direction: row;
-    gap: 76px;
   }
-  .collapse-card div {
+  .collapse-card .collapse-conteneur {
     width: 100%;
   }
   .collapse-card .collapse {
@@ -484,6 +501,7 @@ a {
   }
   .collapse-card {
     margin: 0 100px 0 100px;
+    gap: 76px;
   }
   .collapse-card .collapse {
     padding: 0 0px 0 0px;
@@ -519,11 +537,13 @@ a {
   cursor: pointer;
 }
 
-@media (min-width: 1025px) and (max-width: 1440px) {
+@media (min-width: 1025px) {
   body {
     min-width: 1025px;
-    margin: 0;
+    max-width: 1440px;
+    margin: auto;
     padding: 0;
+    box-sizing: border-box;
   }
 }
 .fiches-content {
@@ -545,20 +565,21 @@ a {
 .tags {
   display: flex;
   gap: 10px;
-  margin: 10px 0 24px 0;
+  margin: 20px 0 24px 0;
+  flex-wrap: wrap;
 }
 .tags .tags-content {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 2px 0px 2px 0px;
+  padding: 2px 29px 2px 29px;
   text-align: center;
   color: #FFFFFF;
   background-color: #FF6060;
   border-radius: 5px;
   font-size: 10px;
   font-weight: 700;
-  width: 84px;
+  white-space: nowrap;
 }
 
 .fiches-content-host {
@@ -610,10 +631,9 @@ a {
     font-size: 16px;
   }
   .fiches-content .tags-content {
-    padding: 3px 40px 2px 40px;
+    padding: 3px 20px 2px 20px;
     text-align: center;
     font-size: 14px;
-    width: 115px;
   }
   .fiches-content-host {
     flex-direction: column-reverse;
@@ -644,6 +664,12 @@ a {
   .fiches-content {
     margin: 30px 100px 24px 100px;
   }
+  .fiches-content .fiches-title {
+    font-size: 36px;
+  }
+  .fiches-content .fiches-subtitle {
+    font-size: 18px;
+  }
 }
 .collapse-fiche {
   flex-direction: row;
@@ -672,11 +698,13 @@ a {
   cursor: pointer;
 }
 
-@media (min-width: 1025px) and (max-width: 1440px) {
+@media (min-width: 1025px) {
   body {
     min-width: 1025px;
-    margin: 0;
+    max-width: 1440px;
+    margin: auto;
     padding: 0;
+    box-sizing: border-box;
   }
 }
 .carrousel {
@@ -691,6 +719,7 @@ a {
   background: #FF6060;
   -o-object-fit: cover;
      object-fit: cover;
+  border-radius: 10px;
   position: relative;
 }
 .carrousel .arrow {
@@ -699,12 +728,22 @@ a {
   width: 24px;
   height: 24px;
   background-color: transparent;
+  transform: translateY(-50%);
 }
 .carrousel .arrowRight {
   right: 7%;
 }
 .carrousel .arrowLeft {
   left: 7%;
+}
+.carrousel p {
+  position: absolute;
+  bottom: 6%;
+  left: 50%;
+  color: #FFFFFF;
+  font-size: 18px;
+  font-weight: 500;
+  visibility: hidden;
 }
 
 @media (min-width: 768px) {
@@ -718,6 +757,9 @@ a {
     width: 36px;
     height: 52px;
   }
+  .carrousel p {
+    visibility: visible;
+  }
 }
 @media (min-width: 1025px) {
   .carrousel {
@@ -726,6 +768,7 @@ a {
   }
   .carrousel img {
     height: 415px;
+    border-radius: 25px;
   }
   .carrousel .arrow {
     width: 47px;
