--- a/src/styles/components/fiches.scss
+++ b/src/styles/components/fiches.scss
@@ -18,7 +18,9 @@
     }
 }
 
-.tags {
+
+
+.tags-contener {
     display: flex;
     gap: 10px;
     margin: 20px 0 24px 0;
@@ -36,6 +38,7 @@
         font-size: 10px;
         font-weight: 700;
         white-space: nowrap;
+   
 
     }
 }
